bindata/cert-manager-deployment/networkpolicies/cert-manager-api-server-egress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-api-server-egress
  namespace: cert-manager
  labels:
    cert-manager.operator.openshift.io/owned-by: cert-manager
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cert-manager
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 6443
