bindata/cert-manager-deployment/networkpolicies/cert-manager-metrics-ingress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-metrics-ingress
  namespace: cert-manager
  labels:
    cert-manager.operator.openshift.io/owned-by: cert-manager
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: openshift-monitoring
    ports:
    - protocol: TCP
      port: 9402
